--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,49 @@
-# Node.js
-node_modules/
-npm-debug.log
-yarn-error.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.idea
+.vscode
 
 # Build output
-.next/
-out/
 dist/
 
 # IDE/Editor specific
-.vscode/
-.idea/
 *.iml
 
 # Environment variables
-.env
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -26,13 +54,6 @@ config.toml
 # Log files
 logs/
 *.log
-
-# Testing
-/coverage/
-
-# Miscellaneous
-.DS_Store
-Thumbs.db
 
 # Db
 db.sqlite
