--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.5.7"
 
       - name: Terraform Init
         working-directory: terraform
