--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "3000:3000"
     environment:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - OLLAMA_API_URL=http://ollama:11434
+      - OLLAMA_BASE_URL=http://ollama:11434
     volumes:
       - perplexica-data:/home/perplexica/data
       - uploads:/home/perplexica/uploads
